Removing bamboo & hot rocks, renaming waxing and gold detox

--- a/namaste/namaste_app/templates/deep_massage.html
+++ b/namaste/namaste_app/templates/deep_massage.html
@@ -79,12 +79,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'piedras-calientes' %}"><img src="/static/img/namaste/hot_rocks (1).jpg" alt=""></a>
+							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'piedras-calientes' %}">Piedras Calientes</a></h3>
-							<p>Esta técnica ancestral combina el poder curativo del calor con los beneficios terapéuticos del masaje, ayudándote a liberar la tensión muscular y promover una sensación de bienestar completa.</p>
-							<a href="{% url 'piedras-calientes' %}" class="btn btn-default">Leer Mas</a>
+							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
+							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
+							<a href="{% url 'vacuslim' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -92,12 +92,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'terapia-bamboo' %}"><img src="/static/img/namaste/bamboo_therapy (1).jpg" alt=""></a>
+							<a href="{% url 'detox-oro' %}"><img src="/static/img/namaste/golden_detox.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-bamboo' %}">Terapia de Bamboo</a></h3>
-							<p>Sumérgete en una experiencia revitalizante con nuestro masaje de tejido profundo, diseñado para liberar la tensión muscular y aliviar los nudos de estrés acumulados.</p>
-							<a href="{% url 'terapia-bamboo' %}" class="btn btn-default">Leer Mas</a>
+							<h3><a href="{% url 'detox-oro' %}">Gold Detox</a></h3>
+							<p>Técnica creada en Colombia la cual consiste y tiene como función principal desintoxicar, desinflamar, y moldear con un buen drenaje.</p>
+							<a href="{% url 'detox-oro' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
