--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -22,7 +22,7 @@
                                 </style>
 								<div class="hero-text margin-adjust">
 									<!-- <h6 class="animated fadeInDown">Consetetur Adipiscing</h6> -->
-									<h1 class="animated fadeInUp">NAMASTE</h1>
+									<h1 class="animated fadeInUp">NAMASTÉ</h1>
 									<!-- <p class="animated fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt ullamcorper magna, in tincidunt ex auctor et.</p> -->
 									<a href="{% url 'contacto' %}" class="btn btn-primary animated fadeInUp">RESERVA AHORA</a>
 								</div>
@@ -40,7 +40,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Bienvenidos a Namaste</span></h2>
+						<h2><span>Bienvenidos a Namasté</span></h2>
 						<p>Donde el arte del masaje se fusiona con la pasión por el bienestar físico y mental de cada cliente. Permítanos llevarte en un recorrido a través de nuestra historia, donde cada palabra cuenta una etapa de transformación, superación y amor.</p>
 					</div>
 				</div>
@@ -151,7 +151,7 @@
 							<a href="{% url 'waxing' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'waxing' %}">Waxing</a></h3>
+							<h3><a href="{% url 'waxing' %}">Depilación</a></h3>
 							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
 							<a href="{% url 'waxing' %}" class="btn btn-default">Leer Mas</a>
 						</div>
@@ -177,7 +177,7 @@
 							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'vacuslim' %}">Vacuslim</a></h3>
+							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
 							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
 							<a href="{% url 'vacuslim' %}" class="btn btn-default">Leer Mas</a>
 						</div>
