--- a/namaste/namaste_app/templates/prenatal.html
+++ b/namaste/namaste_app/templates/prenatal.html
@@ -69,7 +69,7 @@
 							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'drenaje' %}">Drenaje</a></h3>
+							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
 							<p>Nuestro masaje de drenaje linfático, una técnica suave y terapéutica diseñada para estimular el sistema linfático y promover la eliminación de toxinas del cuerpo.</p>
 							<a href="{% url 'drenaje' %}" class="btn btn-default">Leer Mas</a>
 						</div>
