--- a/namaste/namaste_app/templates/vacuslim.html
+++ b/namaste/namaste_app/templates/vacuslim.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} - Vacuslim {% endblock %}
+{% extends "base.html" %} {% block title %} - Vacuslim-48 {% endblock %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -7,10 +7,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Vacuslim</h1>
+						<h1>Vacuslim-48</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">Vacuslim</li>
+							<li class="breadcrumb-item active">Vacuslim-48</li>
 						</ol>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 							<a href="service-single.html"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="service-single.html">Vacuslim</a></h3>
+							<h3><a href="service-single.html">Vacuslim-48</a></h3>
 							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
 							<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reserva Ahora</a>
 						</div>
@@ -70,7 +70,7 @@
 							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'drenaje' %}">Drenaje</a></h3>
+							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
 							<p>Nuestro masaje de drenaje linfático, una técnica suave y terapéutica diseñada para estimular el sistema linfático y promover la eliminación de toxinas del cuerpo.</p>
 							<a href="{% url 'drenaje' %}" class="btn btn-default">Leer Mas</a>
 						</div>
