--- a/namaste/namaste_app/templates/gold_detox.html
+++ b/namaste/namaste_app/templates/gold_detox.html
@@ -80,7 +80,7 @@
 							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'drenaje' %}">Drenaje</a></h3>
+							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
 							<p>Nuestro masaje de drenaje linfático, una técnica suave y terapéutica diseñada para estimular el sistema linfático y promover la eliminación de toxinas del cuerpo.</p>
 							<a href="{% url 'drenaje' %}" class="btn btn-default">Leer Mas</a>
 						</div>
@@ -93,7 +93,7 @@
 							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'vacuslim' %}">Vacuslim</a></h3>
+							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
 							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
 							<a href="{% url 'vacuslim' %}" class="btn btn-default">Leer Mas</a>
 						</div>
@@ -106,7 +106,7 @@
 							<a href="{% url 'waxing' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'waxing' %}">Waxing</a></h3>
+							<h3><a href="{% url 'waxing' %}">Depilación</a></h3>
 							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
 							<a href="{% url 'waxing' %}" class="btn btn-default">Leer Mas</a>
 						</div>
