--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -161,12 +161,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'mesoterapia' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
+							<a href="{% url 'copas-chinas' %}"><img src="/static/img/namaste/copas_chinas.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'mesoterapia' %}">Mesoterapia</a></h3>
-							<p>Con sesiones rápidas y sin dolor, nuestra mesoterapia no invasiva es perfecta para combatir la celulitis, mejorar la firmeza de la piel y rejuvenecer tu apariencia sin tiempo de inactividad.</p>
-							<a href="{% url 'mesoterapia' %}" class="btn btn-default">Leer Mas</a>
+							<h3><a href="{% url 'copas-chinas' %}">Copas Chinas</a></h3>
+							<p>Esta técnica milenaria, utilizada en la medicina tradicional china, ofrece una manera efectiva de aliviar la tensión muscular y mejorar la circulación.</p>
+							<a href="{% url 'copas-chinas' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
