--- a/namaste/namaste_app/templates/post_op.html
+++ b/namaste/namaste_app/templates/post_op.html
@@ -69,7 +69,7 @@
 							<a href="{% url 'detox-oro' %}"><img src="/static/img/namaste/golden_detox.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'detox-oro' %}">Detox De Oro</a></h3>
+							<h3><a href="{% url 'detox-oro' %}">Gold Detox</a></h3>
 							<p>Técnica creada en Colombia la cual consiste y tiene como función principal desintoxicar, desinflamar, y moldear con un buen drenaje.</p>
 							<a href="{% url 'detox-oro' %}" class="btn btn-default">Leer Mas</a>
 						</div>
