--- a/namaste/namaste_app/templates/vacuslim.html
+++ b/namaste/namaste_app/templates/vacuslim.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="col-md-8">
 					<div class="service-details">
-						<h3>Duración: 30 Minutos<br>$35</h3>
+						<h3>Por Tratamiento:<br>$85</h3>
 						<p>Desde Italia llega Vacuslim, un innovador método que integra cinco técnicas eficaces en un solo tratamiento, ofreciendo resultados visibles desde la primera sesión. Este tratamiento es seguro, indoloroso y totalmente no invasivo, ideal para reducir depósitos de grasa y moldear el cuerpo.</p>
 						<p>Es un tratamiento relajante y sin dolor, con una agradable sensación de frío tenue que incrementa la termogénesis y, por lo tanto, un leve consumo de calorías. El efecto de vacío permite una inserción más profunda y uniforme de ingredientes activos para obtener resultados rápidos y duraderos. No interfiere con tus actividades diarias (correr, tomar el sol, nadar).</p>
 						<h3>Beneficios</h3>
@@ -93,7 +93,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy.jpg" alt=""></a>
+							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy_re.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'terapia-metal' %}">Terapia De Metal</a></h3>
