--- a/namaste/namaste_app/static/style.css
+++ b/namaste/namaste_app/static/style.css
@@ -2121,3 +2121,23 @@ ul.navbar-nav.ml-auto{
 	margin:0;
 }
 }
+
+
+.thumb {
+	position: relative; /* Makes this div the reference for positioning inner elements */
+	width: 100%; /* Adjust width as necessary */
+	height: auto; /* Adjust height as necessary */
+}
+
+.play-button {
+	position: absolute;
+	top: 25%; /* Moves the button higher within the div */
+	left: 50%; /* Center horizontally */
+	transform: translateX(-50%); /* Adjust horizontal centering correctly */
+	/* Add more styling here for the button, e.g., size, colors, etc. */
+}
+
+.play-button i {
+	font-size: 24px; /* Adjust size of the play icon */
+	/*color: white;*/ /* Change color as needed */
+}
