--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -32,9 +32,9 @@
 				</div>
 				<div class="col-sm-12 col-md-6">
 					<div class="text-block wow fadeIn">
-						<h2>Our history</h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum justo vitae convallis varius. Nulla tristique risus ut justo pulvinar mattis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum justo vitae convallis varius. Nulla tristique risus ut justo pulvinar mattis.</p>
+						<h2>Nuestra Historia</h2>
+						<p>Mi nombre es Jennys Lorenzo, fundadora de Namasté. Mi trayectoria hacia el mundo del bienestar a través de cada masaje surgió hace cuatro años en la sala de mi hogar, donde vidualizaba poder lograr mi meta en una realidad.</p>
+						<p>El recorrido comenzó como un sueño por brindar un espacio donde cada clienta pueda sentirse comodo, fomentando así una vida más equilibrada y plena en cada persona que visite nuestras cabinas</p>
 					</div>
 				</div>
 			</div>
@@ -47,7 +47,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Meet Our Experts</span></h2>
+						<h2><span>Conozca Nuestros Expertos</span></h2>
 						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
 					</div>
 				</div>
@@ -60,8 +60,8 @@
 							<img src="/static/img/team/1.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Tasfia</h3>
-							<h6>Hair Expert</h6>
+							<h3>Jennys</h3>
+							<h6>Experta en Terapias</h6>
 						</div>
 						<div class="team-overlay text-center">
 							<h3>Tasfia</h3>
