--- a/namaste/namaste_app/templates/services.html
+++ b/namaste/namaste_app/templates/services.html
@@ -128,7 +128,7 @@
 							<a href="{% url 'terapia-madera' %}"><img src="/static/img/namaste/wood_therapy.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-madera' %}">Terapia De Madera</a></h3>
+							<h3><a href="{% url 'terapia-madera' %}">Maderoterapia</a></h3>
 							<p>Nuestra terapia de madera, una técnica ancestral que utiliza instrumentos de madera natural para estimular la circulación, reducir la celulitis y tonificar la piel.</p>
 							<a href="{% url 'terapia-madera' %}" class="btn btn-default">Leer Mas</a>
 						</div>
@@ -138,10 +138,10 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy.jpg" alt=""></a>
+							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy_re.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-metal' %}">Terapia De Metal</a></h3>
+							<h3><a href="{% url 'terapia-metal' %}">Metaloterapia</a></h3>
 							<p>El metal se desliza suavemente sobre la piel, liberando la tensión muscular, mejorando la circulación y promoviendo una sensación de bienestar profundo.</p>
 							<a href="{% url 'terapia-metal' %}" class="btn btn-default">Leer Mas</a>
 						</div>
@@ -151,7 +151,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
@@ -164,7 +164,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'quiromasaje' %}"><img src="/static/img/namaste/post_surgical.jpg" alt=""></a>
+							<a href="{% url 'quiromasaje' %}"><img src="/static/img/namaste/quiromasaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'quiromasaje' %}">Quiromasaje</a></h3>
@@ -177,7 +177,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'copas-chinas' %}"><img src="/static/img/namaste/cup_therapy (1).jpg" alt=""></a>
+							<a href="{% url 'copas-chinas' %}"><img src="/static/img/namaste/copas_chinas.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'copas-chinas' %}">Copas Chinas</a></h3>
@@ -193,29 +193,16 @@
 							<a href="{% url 'pistola-masaje' %}"><img src="/static/img/namaste/massage_gun (1).jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'pistola-masaje' %}">Pistole De Masaje</a></h3>
+							<h3><a href="{% url 'pistola-masaje' %}">Pistola De Masaje</a></h3>
 							<p>Esta herramienta de vanguardia utiliza percusiones rápidas y profundas para estimular los músculos, aliviar la tensión y mejorar la circulación sanguínea.</p>
 							<a href="{% url 'pistola-masaje' %}" class="btn btn-default">Leer Mas</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="service-item wow fadeIn">
-						<div class="thumb">
-							<a href="{% url 'mesoterapia' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
-						</div>
-						<div class="service-info text-center">
-							<h3><a href="{% url 'mesoterapia' %}">Mesoterapia</a></h3>
-							<p>Con sesiones rápidas y sin dolor, nuestra mesoterapia no invasiva es perfecta para combatir la celulitis, mejorar la firmeza de la piel y rejuvenecer tu apariencia sin tiempo de inactividad.</p>
-							<a href="{% url 'mesoterapia' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'contacto' %}" class="btn btn-primary">Contact us</a>
+					<a href="{% url 'contacto' %}" class="btn btn-primary">Contactanos</a>
 				</div>
 			</div>
 		</div>
